# LLPIWC

./: .gitignore  Makefile  README.md  pyproject.toml
docker_files/: Dockerfile  docker-compose.yml
src/: main.py
src/llp/: __init__.py  dataset.py  evaluator.py  model.py  sinkhorn.py  trainer.py
src/llp/base/trainers/: __init__.py  dataset.py  evaluator.py  trainer.py
src/llp/base/utils/: __init__.py  seed.py  tensorboard_logger.py  tools.py
src/runs/: example.sh  preprocess.sh  selected_lrs.csv
src/yamls/: base.yaml  debug.yaml  early_stopping100.yaml  early_stopping300.yaml  preprocess.yaml
src/yamls/Ks/: K128.yaml  K16.yaml  K2.yaml  K32.yaml  K4.yaml  K64.yaml  K8.yaml
src/yamls/data/: cifar10.yaml  fmnist.yaml  kmnist.yaml  mnist.yaml
src/yamls/lrs/: lr1e-1.yaml  lr1e-2.yaml  lr1e-3.yaml  lr1e-4.yaml  lr1e-5.yaml  lr1e-6.yaml
src/yamls/method/: cc.yaml  cc_approx.yaml  cc_approx2rc_approx.yaml  dllp.yaml  dllp_approx.yaml  llpfc.yaml  ot.yaml  pll.yaml  rc.yaml  rc_approx.yaml  supervised.yaml
src/yamls/models/: convnet.yaml  lenet.yaml  linear.yaml  mlp.yaml  resnet.yaml
src/yamls/pretrained_lr/: prelr1e-1.yaml  prelr1e-2.yaml  prelr1e-3.yaml  prelr1e-4.yaml  prelr1e-5.yaml  prelr1e-6.yaml
